FEAT: implement current measurement
hacky bolt-on solution for now

--- a/params.ini
+++ b/params.ini
@@ -3,6 +3,9 @@
  'Flo_min': 1.0,
  'Plo': -5.0,
  'Prf': -5.0,
+ 'Udelta': 0.05,
+ 'Umax': 5.25,
+ 'Umin': 4.75,
  'Usrc': 5.0,
  'loss': 0.82,
  'ref_level': 10.0,
