--- a/params.ini
+++ b/params.ini
@@ -7,7 +7,7 @@
  'Umax': 5.25,
  'Umin': 4.75,
  'Usrc': 5.0,
- 'half_x2_f_lo': False,
+ 'is_Flo_x2': False,
  'loss': 0.82,
  'ref_level': 10.0,
  'scale_y': 5.0}
