--- a/params.ini
+++ b/params.ini
@@ -3,8 +3,10 @@
  'Flo_max': 3.0,
  'Flo_delta': 0.5,
  'is_Flo_x2': False,
+ 'D': False,
  'Prf': -5.0,
  'Usrc': 5.0,
+ 'UsrcD': 3.3,
  'loss': 0.82,
  'ref_level': 10.0,
  'scale_y': 5.0,
