--- a/params.ini
+++ b/params.ini
@@ -5,11 +5,6 @@
  'is_Flo_x2': False,
  'D': False,
  'Prf': -5.0,
- 'Usrc': 5.0,
- 'UsrcD': 3.3,
  'loss': 0.82,
  'ref_level': 10.0,
- 'scale_y': 5.0,
- 'Umin': 4.75,
- 'Umax': 5.25,
- 'Udelta': 0.05}
+ 'scale_y': 5.0}
